<?xml version="1.0"?>
<package format="2">
  <name>orb_slam2_ros</name>
  <version>0.0.1</version>
  <description>ORB SLAM2 ros implementation.</description>

  <maintainer email="haller@unternehmertum.de">Lennart Haller</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>

  </export>
</package>
